--- a/frontend/src/components/GraphViewer/styles.css
+++ b/frontend/src/components/GraphViewer/styles.css
@@ -7,3 +7,10 @@
   width: 100%;
   height: 500px;
 }
+
+.button-goback {
+  width: 200px;
+  height: 50px;
+  margin-left: auto;
+  box-shadow: none !important;
+}
