--- a/frontend/src/pages/Trainer/styles.css
+++ b/frontend/src/pages/Trainer/styles.css
@@ -62,6 +62,16 @@
   outline: 0;
 }
 
+.trainer-select {
+  margin-bottom: 8px;
+}
+
+.trainer-select select {
+  width: 250px;
+  margin-left: 8px;
+  padding: 8px;
+}
+
 @media (min-width: 768px) {
   .button-56 {
     padding: 0 40px;
